--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <tbody>
                 
             </tbody>
-        <table>
+        </table>
         <img src="Doofi.png" alt="Doof" id="Doof">
     </div>
     <footer>
